README: top-of-file CI badge + Status / Verifiability section
Add 4-markdown-badge row at the top of README between the H1 title
and the lead description, and a new ## Status & Verifiability H2
section inserted between \"What is AuraTensor?\" and the trail of H2
sections:

Badges:
- CI status (GitHub Actions from .github/workflows/ci.yml)
- License: Apache 2.0
- Java 25+ (orange shields.io)
- Zero runtime deps (brightgreen shields.io)

Status & Verifiability section content:
1. Re-iterates the CI badge with a caption explaining what the
   pipeline does (./mvnw clean test on Ubuntu x {JDK 21, JDK 25}
   plus a programmatic JMH smoke iteration on the synthetic
   bench shape).
2. Headline real-model tokens/sec table:
     ctx=128: 27 278.898 ms/op -> 2.35 tok/s
     ctx=512: 28 195.458 ms/op -> 2.27 tok/s
     ctx=2048: 29 372.911 ms/op -> 2.18 tok/s
   These are the freshly-measured values from TokenThroughputBenchmark
   committed in c21e033.
3. A brief \"Reproduce locally\" bash code block:
     ./mvnw clean test
     ./mvnw -DskipTests clean package
     java -jar target/auratensor.jar --model ... --tokens 32
   (\"49 JUnit 5 tests, BUILD SUCCESS\" annotation preserved,
    Main-Class manifest annotation preserved, real GGUF model
    path resolved via ~/.auratensor/models/ cache).
4. Footer cross-reference to the existing full bench table in
   ## Tests & Benchmarks (GFM slug #-tests--benchmarks).

No Java sources touched; README.md is the sole modified file.
Empowers visitors to immediately see green CI + headline tok/s
numbers + reproduction commands without reading the entire doc.